home fully responsive completed

--- a/src/styles/Ncbtmb.module.css
+++ b/src/styles/Ncbtmb.module.css
@@ -45,7 +45,7 @@
 }
 
 
-@media screen and (max-width:768px) {
+/* @media screen and (max-width:768px) {
 
     .ncbtapproved .ncbt-desk-img {
 
@@ -97,4 +97,4 @@
     }
 
 
-}
+} */
